# src/routes/index.js
@@ -2,6 +2,7 @@ const express = require('express');
 const swaggerUi = require('swagger-ui-express');
 const swaggerDocument = require('../../swagger-output.json');
 const booksRoutes = require('./books');
+const receiptsRoutes = require('./receipts');
 
 const router = express.Router();
 
@@ -14,5 +15,6 @@ router.get('/', (req, res) => {
 
 router.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 router.use('/books', booksRoutes);
+router.use('/receipts', receiptsRoutes);
 
 module.exports = router;
